Make alarms less generic and send notifications
