# backend/db/models/alarm.go
@@ -8,7 +8,6 @@ import (
 	"github.com/coma64/bahn-alarm-backend/config"
 	"github.com/coma64/bahn-alarm-backend/db"
 	"github.com/coma64/bahn-alarm-backend/server"
-	"github.com/jmoiron/sqlx/types"
 	"github.com/rs/zerolog/log"
 	"time"
 )
@@ -17,44 +16,48 @@ type AlarmUrgency string
 
 type Alarm struct {
 	db.IdModel
-	ReceiverId int
-	CreatedAt  time.Time
-	Urgency    server.Urgency
-	AlarmData  types.JSONText
+	ReceiverId  int
+	CreatedAt   time.Time
+	Urgency     server.Urgency
+	DepartureId int
+	Message     string
 }
 
-func (a *Alarm) ToSchema() (*server.Alarm, error) {
-	content := server.Alarm_Content{}
-	if err := content.UnmarshalJSON(a.AlarmData); err != nil {
-		return nil, err
-	}
+// https://developer.mozilla.org/en-US/docs/Web/API/Notification/Notification
+type notificationOptions struct {
+	Title string      `json:"title"`
+	Body  string      `json:"body"`
+	Data  interface{} `json:"data"`
+}
 
+type pushNotification struct {
+	Notification notificationOptions `json:"notification"`
+}
+
+func (a *Alarm) ToSchema(connection *server.SimpleConnection) (*server.Alarm, error) {
 	return &server.Alarm{
-		Content:   content,
-		CreatedAt: a.CreatedAt,
-		Id:        a.Id,
-		Urgency:   a.Urgency,
+		Connection: *connection,
+		CreatedAt:  a.CreatedAt,
+		Id:         a.Id,
+		Message:    a.Message,
+		Urgency:    a.Urgency,
 	}, nil
 }
 
-func InsertAlarm(ctx context.Context, receiverId int, urgency server.Urgency, content *server.ConnectionAlarm) (*Alarm, error) {
-	contentJson, err := json.Marshal(content)
-	if err != nil {
-		return nil, fmt.Errorf("error marshaling alarm content: %w", err)
-	}
-
+func InsertAlarm(ctx context.Context, receiverId int, urgency server.Urgency, departureId int, message string) (*Alarm, error) {
 	alarm := &Alarm{}
 	return alarm, db.Db.GetContext(
 		ctx,
 		alarm,
-		"insert into alarms (receiverId, urgency, alarmData) values ($1, $2, $3) returning *",
+		"insert into alarms (receiverId, urgency, departureId, message) values ($1, $2, $3, $4) returning *",
 		receiverId,
 		urgency,
-		contentJson,
+		departureId,
+		message,
 	)
 }
 
-func (a *Alarm) SendPushNotification() error {
+func (a *Alarm) SendPushNotification(ctx context.Context) error {
 	var sub PushNotificationSub
 	if err := db.Db.Get(
 		&sub,
@@ -70,17 +73,45 @@ func (a *Alarm) SendPushNotification() error {
 		return fmt.Errorf("error unmarshaling webpush subscription: %w", err)
 	}
 
-	go func() {
-		_, err := webpush.SendNotification(a.AlarmData, webpushSub, &webpush.Options{
-			Subscriber:      "coma64@outlook.com",
-			TTL:             30,
-			VAPIDPublicKey:  config.Conf.PushNotifications.VapidKeys.Public,
-			VAPIDPrivateKey: config.Conf.PushNotifications.VapidKeys.Private,
-		})
-		if err != nil {
-			log.Err(err).Int("receiverId", a.ReceiverId).Int("alarmId", a.Id).Msg("Failed to send push notification")
-		}
-	}()
+	notification, err := a.toPushNotification(ctx)
+	if err != nil {
+		return fmt.Errorf("error creating push notification: %w", err)
+	}
+
+	var notificationJson []byte
+	notificationJson, err = json.Marshal(notification)
+	if err != nil {
+		return fmt.Errorf("error marshaling push notification: %w", err)
+	}
+
+	_, err = webpush.SendNotificationWithContext(ctx, notificationJson, webpushSub, &webpush.Options{
+		Subscriber:      "coma64@outlook.com",
+		TTL:             30,
+		VAPIDPublicKey:  config.Conf.PushNotifications.VapidKeys.Public,
+		VAPIDPrivateKey: config.Conf.PushNotifications.VapidKeys.Private,
+	})
 
 	return nil
+}
+
+func (a *Alarm) toPushNotification(ctx context.Context) (*pushNotification, error) {
+	stations := struct {
+		FromStationName string
+		ToStationName   string
+	}{}
+	if err := db.Db.GetContext(
+		ctx,
+		&stations,
+		"select fromStationName, toStationname from fatDepartures where id = $1",
+		a.DepartureId,
+	); err != nil {
+		return nil, fmt.Errorf("error getting station names: %w", err)
+	}
+
+	return &pushNotification{
+		Notification: notificationOptions{
+			Title: stations.FromStationName + " -> " + stations.ToStationName,
+			Body:  a.Message,
+		},
+	}, nil
 }
